--- a/build.gradle
+++ b/build.gradle
@@ -294,6 +294,9 @@ project(':wres-io')
         compile 'org.glassfish.jersey.inject:jersey-hk2:2.29.1'
         compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.29.1'
 
+        // jackson-databind is a transitive dependency, but 2.9.9 has several CVEs.
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.9.10.2'
+
         compile('edu.ucar:cdm-core:5.2.0')
         {
             // Because we use slf4j, not jcl:
@@ -305,7 +308,7 @@ project(':wres-io')
 
         compile group: 'org.liquibase', name: 'liquibase-core', version: '3.8.4'
 
-        compile( group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.641' )
+        compile( group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.700' )
         {
             // Because we use slf4j, not jcl:
             exclude group: 'commons-logging', module: 'commons-logging'
@@ -473,6 +476,9 @@ project(':wres-config')
         jaxb 'org.jvnet.jaxb2_commons:jaxb2-basics:0.12.0'
         jaxb 'org.jvnet.jaxb2_commons:jaxb2-basics-annotate:1.1.0'
 
+        // commons-beanutils is transitive dependency of jaxb2-basics, has CVEs
+	jaxb 'commons-beanutils:commons-beanutils:1.9.4'
+
         // jaxb-xjc transitively includes bind-api and jaxb-core
         jaxb 'org.glassfish.jaxb:jaxb-xjc:2.3.2'
         jaxb 'com.github.sabomichal:immutable-xjc-plugin:1.6.1'
@@ -624,7 +630,7 @@ project(':wres-worker')
     {
         compile project( ':wres-messages' )
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
-        compile 'com.rabbitmq:amqp-client:5.7.3'
+        compile 'com.rabbitmq:amqp-client:5.8.0'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         testCompile 'junit:junit:4.13-beta-3'
@@ -666,7 +672,7 @@ project(':wres-tasker')
     {
         compile project( ':wres-messages' )
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
-        compile 'com.rabbitmq:amqp-client:5.7.3'
+        compile 'com.rabbitmq:amqp-client:5.8.0'
         compile 'javax.ws.rs:javax.ws.rs-api:2.1.1'
         compile 'javax.annotation:javax.annotation-api:1.3.2'
 
@@ -704,10 +710,10 @@ project(':wres-tasker')
         testCompile 'org.bouncycastle:bcprov-jdk15on:1.63'
 
         // To test against an embedded AMQP broker
-        testCompile 'org.apache.qpid:qpid-broker-core:7.1.4'
+        testCompile 'org.apache.qpid:qpid-broker-core:7.1.6'
         // Provides support for both 0-8 and 0-9-1
-        testCompile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.4'
-        testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.4'
+        testCompile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.6'
+        testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.6'
     }
 
     apply plugin: 'application'
