Use less-vulnerable images on COWRES, set more limits
Refs #75050
Refs #75101

--- a/docker-compose-all-roles.yml
+++ b/docker-compose-all-roles.yml
@@ -3,7 +3,7 @@ services:
     tasker:
         ports:
          - "443:8443"
-        image: "${DOCKER_REGISTRY}/wres/wres-tasker:20200219-db04e09"
+        image: "${DOCKER_REGISTRY}/wres/wres-tasker:20200219-d2fafa1"
         restart: always
         depends_on:
          - "broker"
@@ -18,6 +18,9 @@ services:
         # Tasker JVM should have 1305m max heap specified at launch
         # The total limit includes stack space which depends on Thread count
         mem_limit: 1880m
+        cpu_percent: 100
+        cap_drop:
+         - ALL
     broker:
         ports:
          - "5671:5671"
@@ -31,8 +34,11 @@ services:
          - RABBITMQ_CONFIG_FILE=rabbitmq${WRES_ENV_SUFFIX}.config
         # rabbitmq.conf should have 360m specified as high watermark
         mem_limit: 720m
+        cpu_percent: 100
+        cap_drop:
+         - ALL
     worker:
-        image: "${DOCKER_REGISTRY}/wres/wres-worker:20200219-db04e09"
+        image: "${DOCKER_REGISTRY}/wres/wres-worker:20200219-d2fafa1"
         restart: always
         depends_on:
          - "broker"
@@ -55,3 +61,6 @@ services:
          - INNER_JAVA_OPTS=-Dwres.url=${WRES_DB_FQDN} -Dwres.databaseName=wres8 -Dwres.username=wres_user8 -Dwres.attemptToMigrate=false -XX:HeapDumpPath=/mnt/wres_share/ -XX:OnOutOfMemoryError='mv /mnt/wres_share/java_pid%p.hprof /mnt/wres_share/java_pid%p_`hostname`.hprof; chmod 775 /mnt/wres_share/java_pid%p_`hostname`.hprof'
         # Shim JVM should have 32m max heap, core JVM should have 2180m max heap
         mem_limit: 2600m
+        cpu_percent: 100
+        cap_drop:
+         - ALL
