--- a/docker-compose-workers-only.yml
+++ b/docker-compose-workers-only.yml
@@ -1,7 +1,7 @@
 version: '2.2'
 services:
     worker:
-        image: "${DOCKER_REGISTRY}/wres/wres-worker:20200219-db04e09"
+        image: "${DOCKER_REGISTRY}/wres/wres-worker:20200219-d2fafa1"
         restart: always
         volumes:
          - /mnt/wres_share:/mnt/wres_share
@@ -19,3 +19,6 @@ services:
          - INNER_JAVA_OPTS=-Dwres.url=${WRES_DB_FQDN} -Dwres.databaseName=wres8 -Dwres.username=wres_user8 -Dwres.attemptToMigrate=false -XX:HeapDumpPath=/mnt/wres_share/ -XX:OnOutOfMemoryError='mv /mnt/wres_share/java_pid%p.hprof /mnt/wres_share/java_pid%p_`hostname`.hprof; chmod 775 /mnt/wres_share/java_pid%p_`hostname`.hprof'
         # Shim JVM should have 32m max heap, core JVM should have 2180m max heap
         mem_limit: 2600m
+        cpu_percent: 100
+        cap_drop:
+         - ALL
